syntax = "proto3";

package testdata;

option go_package = "github.com/jeremyhahn/go-codec/pkg/protobuf/testdata";

message TestMessage {
  string name = 1;
  int32 age = 2;
  string email = 3;
}

message StringValue {
  string value = 1;
}

message IntValue {
  int32 value = 1;
}

message StringList {
  repeated string values = 1;
}

message IntMap {
  map<string, int32> values = 1;
}
